--- a/public/index.html
+++ b/public/index.html
@@ -3,13 +3,12 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Template</title>
-    <style>
-      body {
-        color: #2b2b2b;
-        font-family: Arial, Helvetica, sans-serif;
-      }
-    </style>
+    <meta name="theme-color" content="#000000" />
+    <meta
+      name="description"
+      content="Web site created using create-react-app"
+    />
+    <title>React App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
